# ibkr-data-pipeline

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
notebooks/: exploratory_analysis.ipynb
src/: data_ingestion.py  db.py  ibkr_setup.py  queries.py  vwap.py
